Initial commit: NEAT-powered Flappy Bird AI agent

--- a/index.html
+++ b/index.html
@@ -661,6 +661,12 @@
 
             <div class="results-grid">
                 <div class="result-card">
+                    <h3>Generation 7 - Learning in Progress</h3>
+                    <img src="diagrams/gen-7_birds-3_score-1.png" alt="Generation 7 Bird 3 Score 1" class="result-image">
+                    <p>Lower-performing individual showing ongoing learning process. Population diversity ensures evolutionary progress continues.</p>
+                </div>
+
+                <div class="result-card">
                     <h3>Generation 7 - Mixed Performance</h3>
                     <img src="diagrams/gen-7_birds-1_score-21.png" alt="Generation 7 Bird 1 Score 21" class="result-image">
                     <p>Early generation showing varied performance levels. Some birds achieve moderate scores while others struggle with basic navigation.</p>
@@ -672,11 +678,7 @@
                     <p>Exceptional individual achieving 254 points, demonstrating emergence of effective navigation strategies within the population.</p>
                 </div>
 
-                <div class="result-card">
-                    <h3>Generation 7 - Learning in Progress</h3>
-                    <img src="diagrams/gen-7_birds-3_score-1.png" alt="Generation 7 Bird 3 Score 1" class="result-image">
-                    <p>Lower-performing individual showing ongoing learning process. Population diversity ensures evolutionary progress continues.</p>
-                </div>
+                
             </div>
 
             <div style="margin-top: 3rem; text-align: center;">
@@ -706,33 +708,13 @@
     <!-- Documentation -->
     <section class="section">
         <div class="container">
-            <h2 class="section-title">Documentation</h2>
+            <h2 class="section-title">Documentation & Source Code</h2>
             <p class="section-subtitle">Complete technical documentation and analysis</p>
 
             <div class="docs-grid">
                 <a href="PROJECT_REPORT.md" class="doc-link">
                     <h3>Project Report</h3>
                     <p>Complete academic-style project report with methodology, implementation details, and evaluation results.</p>
-                </a>
-
-                <a href="SYSTEM_DESIGN.md" class="doc-link">
-                    <h3>System Design</h3>
-                    <p>Technical architecture documentation with component relationships and system design principles.</p>
-                </a>
-
-                <a href="ARCHITECTURE.md" class="doc-link">
-                    <h3>Architecture Diagrams</h3>
-                    <p>Visual system architecture with Mermaid diagrams and detailed component explanations.</p>
-                </a>
-
-                <a href="DOCUMENTATION.md" class="doc-link">
-                    <h3>Technical Documentation</h3>
-                    <p>API documentation and technical implementation details for developers and researchers.</p>
-                </a>
-
-                <a href="GENERATION_ANALYSIS.md" class="doc-link">
-                    <h3>Generation Analysis</h3>
-                    <p>Detailed analysis of training runs with generation-by-generation statistics and performance metrics.</p>
                 </a>
 
                 <a href="https://github.com/whizali/neat-flappy-bird-ai" target="_blank" class="doc-link">
