Update Project Report link to point to PDF file

--- a/index.html
+++ b/index.html
@@ -712,8 +712,9 @@
             <p class="section-subtitle">Complete technical documentation and analysis</p>
 
             <div class="docs-grid">
-                <a href="PROJECT_REPORT.md" class="doc-link">
+                <a href="NEAT_FlappyBird_AI.pdf" class="doc-link">
                     <h3>Project Report</h3>
+                    <p>Complete project report with implementation details, and evaluation.</p>
                 </a>
 
                 <a href="https://github.com/whizali/neat-flappy-bird-ai" target="_blank" class="doc-link">
